--- a/mindev-pdfviewer/build.gradle
+++ b/mindev-pdfviewer/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
 android {
 
     compileSdkVersion rootProject.compileSdkVersion
@@ -34,7 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
-    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+    api 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
